--- a/public/style.css
+++ b/public/style.css
@@ -29,6 +29,7 @@ body {
 }
 
 
+/* Add style to the counter of correct and questions number */
 #question-number, #question-correct {
 margin-bottom: 20px;
 padding-bottom: 10px;
@@ -37,6 +38,7 @@ color: chocolate;
 text-shadow: 1px 1px 25px rgb(148, 137, 137);
 }
 
+/* Add style to the button of answers and controls as start and next */
 .btn-grid {
   display: grid;
   grid-template-columns: repeat(2, auto);
@@ -52,10 +54,11 @@ text-shadow: 1px 1px 25px rgb(148, 137, 137);
   color: white;
   outline: none;
   font-size: 1.2rem;
+  cursor: pointer;
 }
 
 .btn:hover {
-  border: 2px solid black;
+  border: rgba(255, 255, 255, 0.7)
 }
 
 .btn.correct {
@@ -81,4 +84,18 @@ text-shadow: 1px 1px 25px rgb(148, 137, 137);
 
 .hide{
   display: none;
+}
+
+/* Add style to the get hint text */
+#hintBox {
+  display: flex;
+  justify-content:flex-end;
+  margin-top: 20px;
+  padding-top: 20px;
+}
+#hint{
+  text-decoration: none;
+  font-size:1.5rem;
+  color: chocolate;
+  text-shadow: 1px 1px 25px rgb(148, 137, 137);
 }
