Editing after Martijn feedbacks

--- a/public/style.css
+++ b/public/style.css
@@ -89,11 +89,14 @@ text-shadow: 1px 1px 25px rgb(148, 137, 137);
 /* Add style to the get hint text */
 #hintBox {
   display: flex;
-  justify-content:flex-end;
+  flex-direction: row;
+  justify-content:space-around;
+  align-items:flex-end;
+  align-content: flex-end;
   margin-top: 20px;
   padding-top: 20px;
 }
-#hint{
+#hintBox a{
   text-decoration: none;
   font-size:1.5rem;
   color: chocolate;
