--- a/public/style.css
+++ b/public/style.css
@@ -96,7 +96,7 @@ text-shadow: 1px 1px 25px rgb(148, 137, 137);
 
 
 /* Add style to the get hint text */
-#hintBox {
+#hint-box {
   display: flex;
   flex-direction: row;
   justify-content:space-around;
@@ -105,7 +105,7 @@ text-shadow: 1px 1px 25px rgb(148, 137, 137);
   margin-top: 20px;
   padding-top: 20px;
 }
-#hintBox a{
+#hint-box a{
   text-decoration: none;
   font-size:1.5rem;
   color: chocolate;
