--- a/public/style.css
+++ b/public/style.css
@@ -49,6 +49,7 @@ h1 {
   width: 800px;
   max-width: 80%;
   height: 580px;
+  max-height: 80%;
   background-color: white;
   background-image: url(background.jpg);
   background-position: left;
